# weather-aware-legged-control

./: README.md
src/Mid360_simulation_plugin/livox_laser_simulation/: CMakeLists.txt  package.xml
src/legged_controllers/config/: joy.yaml
src/legged_controllers/config/dmgo/: reference.info  task.info
src/legged_controllers/include/legged_controllers/: LeggedController.h
src/legged_controllers/launch/: load_controller.launch
src/legged_controllers/rviz/: legged_robot.rviz
src/legged_controllers/src/: LeggedController.cpp
src/legged_estimation/include/legged_estimation/: StateEstimateBase.h
src/legged_examples/legged_damiao/5.15/: .Module.symvers.cmd  .gs_usb.ko.cmd  .gs_usb.mod.cmd  .gs_usb.mod.o.cmd  .gs_usb.o.cmd  .modules.order.cmd  can.sh  gs_usb.ko  gs_usb.mod  gs_usb.mod.c  modules.order
src/legged_examples/legged_damiao/dm_imu/include/dm_imu/: bsp_crc.h
src/legged_examples/legged_damiao/dm_imu/src/: bsp_crc.cpp  imu_driver.cpp
src/legged_examples/legged_damiao/dmbot_serial/: CMakeLists.txt  package.ros1.xml  package.ros2.xml
src/legged_examples/legged_damiao/dmbot_serial/include/dmbot_serial/protocol/: damiao.h  socketcan.h
src/legged_examples/legged_damiao/dmbot_serial/launch/: test_motor.launch
src/legged_examples/legged_damiao/dmbot_serial/src/: test.cpp
src/legged_examples/legged_damiao/dmbot_serial/src/protocol/: damiao.cpp  socketcan.cpp
src/legged_examples/legged_damiao/legged_damiao_description/: CMakeLists.txt  package.xml
src/legged_examples/legged_damiao/legged_damiao_description/launch/: display.launch  empty_world.launch
src/legged_examples/legged_damiao/legged_damiao_description/rviz/: rviz.rviz
src/legged_examples/legged_damiao/legged_damiao_description/urdf/: robot.xacro
src/legged_examples/legged_damiao/legged_damiao_description/urdf/common/: leg.xacro  livox_mid360.xacro
src/legged_examples/legged_damiao/legged_damiao_description/urdf/dmgo/: const.xacro  dmgo.urdf
src/legged_examples/legged_damiao/legged_damiao_hw/: CMakeLists.txt  package.xml
src/legged_examples/legged_damiao/legged_damiao_hw/config/: dmgo.yaml
src/legged_examples/legged_damiao/legged_damiao_hw/include/legged_damiao_hw/: DmHW.h
src/legged_examples/legged_damiao/legged_damiao_hw/launch/: dmgo.launch  legged_damiao_hw.launch
src/legged_examples/legged_damiao/legged_damiao_hw/src/: DmHW.cpp  legged_dm_hw.cpp
src/legged_examples/legged_unitree/legged_unitree_description/launch/: empty_world.launch
src/legged_examples/legged_unitree/legged_unitree_description/rviz/: urdf.rviz
src/legged_gazebo/worlds/: empty_world.world
src/legged_interface/include/legged_interface/: SwitchedModelReferenceManager.h
src/legged_interface/src/: SwitchedModelReferenceManager.cpp
src/livox_elevation_mapping/: CMakeLists.txt  package.xml
src/livox_elevation_mapping/launch/: local_elevation_mapping.launch
src/livox_elevation_mapping/models/livox_mid360_sensor/: model.config  model.sdf
src/livox_elevation_mapping/scripts/: livox_sensor_follower.py  local_elevation_mapper.py  synthetic_livox_cloud.py
