<?xml version="1.0"?>
<package format="2">
  <name>livox_elevation_mapping</name>
  <version>0.0.1</version>
  <description>Local elevation-map visualization from simulated Livox Mid-360 point clouds.</description>

  <maintainer email="yuan@todo.todo">yuan</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
